# nubus-directory-importer

./: .dockerignore  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  MANIFEST.in  README.md  Tiltfile  clean.sh  docker-compose.yml  pyproject.toml  release.sh  setup.cfg  setup.py  sonar-project.properties  stdeb.cfg  tilt-values.yaml  tox.ini
config/: ad-domain-config-extended.yaml.example  ad-domain-config.yaml.example
dev-env/: README.md  Tiltfile  tilt-values.yaml
docker/directory-importer/: Dockerfile  activate_venv.envsh
docker/udm-directory-connector/: Dockerfile
docs/: current_state_uml_class_diagram.md  future_state_uml_class_diagram.md
examples/: http-client.env.json  udm_api.http
helm/directory-importer/: .helmignore  Chart.yaml  README.md  README.md.gotmpl  linter_values.yaml  values.yaml
helm/directory-importer/.kyverno/: kyverno-test.yaml.jinja2  values-kyverno.yaml
helm/directory-importer/templates/: configmap-config-file.yaml  configmap.yaml  deployment.yaml  extraSecrets.yaml  secret-source-directory.yaml  secret-udm.yaml  serviceaccount.yaml
junkaptor/: LICENSE  MANIFEST.in  README.md  setup.cfg  setup.py  stdeb.cfg
junkaptor/junkaptor/: __about__.py  __init__.py  trans.py  typehints.py
load-tests/: README.md  ad-domain-config-load-tests.yaml.example  ad_provisioner.py
resources/: test.sh
systemd/: udm-directory-connector.timer  udm-directory-connector@.service
tests/: .gitignore  __init__.py  base-defaults.conf  base.conf  conftest.py  docker-compose.yml  maildomain.sh  test_cli.py  test_connector.py  test_udm.py  test_util_repeater.py
tests/data/: connector.yml  customADUser.ldif  source.ldif  ucs-1-root-ca.crt  ucs-2-root-ca.crt
tests/e2e/: README.md  conftest.py  test_sync_scenarios.py
tests/helm_unit/: conftest.py  test_configmap.py  test_deployment.py  test_secret.py
tests/helm_unit/common_behaviour/: test_extra_env_vars.py  test_image_configuration.py
tests/load/: README.md  ad-domain-config-load-tests.yaml.example  ad_provisioner.py  configure-tmux.sh  load-test-results_2025-02.md  performance.ipynb  setup-directory-importer-host.sh
tests/load/src/: performance_graphs.py
tests/src/: ad_connection.py  ad_group.py
tests/unit/: conftest.py  test_cli.py  test_config.py  test_deletion_grace_period.py  test_source_search.py
udm_directory_connector/: __about__.py  __init__.py  __main__.py  cfg.py  config.py  connector.py  sanitize.py  trans.py  udm.py
univention/directory_importer/: __about__.py  __init__.py  __main__.py  config.py  connector.py  sanitize.py  trans.py  udm.py  util.py
