[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "directory-importer"
version = "0.1.0"
description = "Enables a one way sync of user and group data from an LDAP source directory (Active Directory) to a Nubus deyployment"
readme = "README.md"
authors = [
  {name = "Univention GmbH", email = "packages@univention.de"},
]
# license = "GNU Affero General Public License v3"
keywords = []


requires-python = ">=3.10"
dependencies = [
    "certifi",
    "junkaptor",
    "phonenumbers",
    "python-ldap",
    "requests",
    "strictyaml",
    "typer",
]

[dependency-groups]
dev = [
    "pytest-mock>=3.14.0",
    "pytest>=8.3.4",
    "pdbpp>=0.10.3",
    "ldap3>=2.9.1",
    "faker>=35.2.0"
]

[tool.hatch.build]
include = [
    "univention/directory_importer",
]

[project.urls]
Homepage = "https://git.knut.univention.de/univention/nubus/directory-importer"

[project.scripts]
directory-importer = "univention.directory_importer.__main__:app"

[tool.ruff]
target-version = "py311"
line-length = 120

extend-select = ["I"]  # activate isort

[tool.ruff.isort]
known-first-party = ["slapdsock", "univention"]

[tool.uv.sources]
junkaptor = { path = "junkaptor" }
