[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "directory-importer"
version = "1.0.0"
description = "Enables a one way sync of user and group data from an LDAP source directory (Active Directory) to a Nubus deyployment"
readme = "README.md"
authors = [
  {name = "Univention GmbH", email = "packages@univention.de"},
]
# license = "GNU Affero General Public License v3"
keywords = []

requires-python = ">=3.10"
dependencies = [
    "certifi",
    "junkaptor",
    "phonenumbers",
    "pytest-helm>=0.0.1.dev0",
    "python-ldap",
    "requests",
    "strictyaml",
    "typer",
]

[dependency-groups]
dev = [
    "pytest-mock>=3.14.0",
    "pytest>=8.3.4",
    "pdbpp>=0.10.3",
    "ldap3>=2.9.1",
    "faker>=35.2.0",
    "pytest-helm==0.11.2",
    "helm-test-harness==0.11.2",
    "pyyaml",
    "python-jsonpath",
    "pytest-xdist",
]

[tool.uv.sources]
junkaptor = { path = "junkaptor" }
# For easier development with local dependencies, you can temporarily replace the following two lines with the ones below them.
pytest-helm = { index = "gitlab" }
helm-test-harness = { index = "gitlab" }
# pytest-helm = { path = "../common-helm/pytest-helm", editable = true }
# helm-test-harness = { path = "../common-helm/helm-test-harness/", editable = true }

[[tool.uv.index]]
name = "gitlab"
url = "https://git.knut.univention.de/api/v4/projects/829/packages/pypi/simple"

[tool.hatch.build]
include = [
    "univention/directory_importer",
]

[project.urls]
Homepage = "https://git.knut.univention.de/univention/nubus/directory-importer"

[project.scripts]
directory-importer = "univention.directory_importer.__main__:app"

[tool.ruff]
target-version = "py311"
line-length = 120

extend-select = ["I"]  # activate isort

[tool.ruff.isort]
known-first-party = ["slapdsock", "univention"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "-v"
pythonpath = [".", "tests"]
