[metadata]
license_files = LICENSE
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
	Development Status :: 5 - Production/Stable
	Intended Audience :: Developers
	Intended Audience :: Information Technology
	Intended Audience :: System Administrators
	License :: OSI Approved :: Apache Software License
	Programming Language :: Python
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.6
	Programming Language :: Python :: 3.7
	Programming Language :: Python :: 3.8
	Programming Language :: Python :: 3.9
	Programming Language :: Python :: 3.10
	Programming Language :: Python :: 3 :: Only
	Topic :: Software Development :: Libraries :: Python Modules

[install]
compile = 1
optimize = 1

[bdist_wheel]
universal = 0

[egg_info]
tag_build =
tag_date = 0
